--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <p class="imageline">
               Hello! I'm John Lu, a sophomore at Johns Hopkins University
               studying computer science and applied math and statistics. In my
-              freetime, I enjoy body building, playing tennis, and gaming!. I am
+              freetime, I enjoy body building, playing tennis, and gaming. I am
               currently also and learning how to program websites! I am
               currently learning how to use HTML, CSS, and Javascript while also
               learning other languages like Matlab and C++ in my classes. I am
@@ -64,10 +64,10 @@
           I am making this website for
           <a
             href="https://johnlulu2004.github.io/Pricing-Panel-Coaching/index.html"
-            >Valorant coaching.</a
+            >Valorant coaching</a
           >
-          something that I want to do for fun. I am currently top 2000 in North
-          America so I want to help others improve their gameplay.
+          , something that I want to do for fun. I am currently top 2000 in
+          North America so I want to help others improve their gameplay.
         </p>
         <p>
           There will be more to come. I am currently self-learning from a online
