Added video of my Game as well as image of other websites and expanded upon the index.html description

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <p class="imageline">
               Hello! I'm John Lu, a sophomore at Johns Hopkins University
               studying computer science and applied math and statistics. In my
-              freetime, I enjoy body building, playing tennis, and gaming. I am
+              freetime, I enjoy body building, playing tennis, and game design. I am
               currently also and learning how to program websites! I am
               currently learning how to use HTML, CSS, and Javascript while also
               learning other languages like Matlab and C++ in my classes. I am
@@ -49,30 +49,40 @@
     <section id="project">
       <div class="container">
         <h2>Projects</h2>
-        <p>
-          This is one of my first projects in web-design! I want to continue
-          learning more about flexbox, grid, Javascript, and animations
-        </p>
-        <p>
-          This website is for
-          <a href="https://johnlulu2004.github.io/My-Photo-Blog/photosite"
-            >my photo blog</a
-          >
-          of my favorite photos I have taken!
-        </p>
-        <p>
-          I am making this website for
-          <a
-            href="https://johnlulu2004.github.io/Pricing-Panel-Coaching/index.html"
-            >Valorant coaching</a
-          >
-          , something that I want to do for fun. I am currently top 2000 in
-          North America so I want to help others improve their gameplay.
-        </p>
-        <p>
-          There will be more to come. I am currently self-learning from a online
-          videos
-        </p>
+        <div class="grid-container">
+          <div class = "text-section">          <p>
+            This is one of my first projects in web-design! I want to continue
+            learning more about flexbox, grid, Javascript, and animations
+            <br /><br />
+
+
+            I have been working on a game on Unity. Here is a video
+            of the mechanics I have implemented so far. The scripts are in my 
+            <a href="https://github.com/johnlulu2004/Platformer-Game-Scripts">github</a>.
+            <br /><br />
+                        This website is for
+            <a href="https://johnlulu2004.github.io/My-Photo-Blog/photosite"
+              >my photo blog</a
+            >
+            of my favorite photos I have taken! <br /><br />
+            I am making this website for
+            <a
+              href="https://johnlulu2004.github.io/Pricing-Panel-Coaching/index.html"
+              >Valorant coaching</a
+            >, something that I want to do for fun. I am currently top 2000 in
+            North America so I want to help others improve their gameplay.
+            <br /><br />
+            There will be more to come. I am currently self-learning from a
+            online videos
+          </p></div>
+          <div class="image-section">
+            <video
+              src="Game.mp4.mp4"
+              controls
+            ></video>
+            <img src="pricingpanel.png" alt="">
+
+        </div>
       </div>
     </section>
 
