--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
       <div class="container">
         <div class="animated">
+          <div class = "fixed">
           <h1>John Lu</h1>
           <hr />
           <nav>
@@ -20,6 +21,7 @@
               <li><a href="#contact">Contact</a></li>
             </ul>
           </nav>
+          </div>
         </div>
       </div>
     </header>
@@ -103,5 +105,35 @@
         </div>
       </div>
     </section>
+
+    <!-- JavaScript for Smooth Scrolling with Responsive Offset -->
+    <script>
+      // Function to determine the offset based on viewport width
+      function getOffset() {
+        const width = window.innerWidth;
+        if (width > 1200) return 140; // Large screens
+        if (width > 768) return 130;   // Medium screens
+        return 180;                    // Small screens
+      }
+
+      document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+        anchor.addEventListener('click', function(e) {
+          e.preventDefault();
+
+          const targetId = this.getAttribute('href');
+          const targetElement = document.querySelector(targetId);
+
+          const offset = getOffset(); // Get the appropriate offset
+
+          const elementPosition = targetElement.getBoundingClientRect().top;
+          const offsetPosition = elementPosition + window.pageYOffset - offset;
+
+          window.scrollTo({
+            top: offsetPosition,
+            behavior: 'smooth'
+          });
+        });
+      });
+    </script>
   </body>
 </html>
