changed about profile

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="grid-container">
           <div class="text-section">
             <p class="imageline">
-              Hello! I'm John Lu, a sophomore at Johns Hopkins University
+              My Name is John Lu and I am a sophomore at Johns Hopkins University
               studying computer science and applied math and statistics. In my
               freetime, I enjoy body building, playing tennis, and game design. I am
               currently also and learning how to program websites! I am
