changed image line p class

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
         <div class="grid-container">
           <div class="text-section">
             <p class="imageline">
-              My Name is John Lu and I am a sophomore at Johns Hopkins University
-              studying computer science and applied math and statistics. In my
-              freetime, I enjoy body building, playing tennis, and game design. I am
-              currently also and learning how to program websites! I am
+              My name is John Lu and I am a current sophomore at Johns Hopkins University
+              studying computer science and applied math and statistics.  I am
               currently learning how to use HTML, CSS, and Javascript while also
               learning other languages like Matlab and C++ in my classes. I am
-              also a part of the JHU ICPC, tennis, and Hop AI club!
+              also a part of the JHU ICPC, tennis, and Hop AI club! In my
+              freetime, I enjoy body building, playing tennis, and game design. I am
+              currently also and learning how to program websites!
             </p>
           </div>
           <div class="image-section">
