--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
             >, something that I want to do for fun. I am currently top 2000 in
             North America so I want to help others improve their gameplay.
             <br /><br />
-            There will be more to come. I am currently self-learning from a
-            online videos
+            There will be more to come. I am currently self-learning from
+            online videos.
           </p></div>
           <div class="image-section">
             <video
