reworded my about me

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="script.css" />
     <link rel="icon" href="JLogo.jpg" type="image/x-icon" />
+
     <title>John Lu</title>
   </head>
   <body>
@@ -37,7 +38,7 @@
               currently learning how to use HTML, CSS, and Javascript while also
               learning other languages like Matlab and C++ in my classes. I am
               also a part of the JHU ICPC, tennis, and Hop AI club! In my
-              freetime, I enjoy body building, playing tennis, and game design. I am
+              freetime, I enjoy working out, playing tennis, and reviewing food. I am
               currently also and learning how to program websites!
             </p>
           </div>
@@ -135,5 +136,7 @@
         });
       });
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
   </body>
 </html>
