--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="script.css" />
     <link rel="icon" href="JLogo.jpg" type="image/x-icon" />
 
@@ -112,9 +118,9 @@
       // Function to determine the offset based on viewport width
       function getOffset() {
         const width = window.innerWidth;
-        if (width > 1200) return 140; // Large screens
-        if (width > 768) return 130;   // Medium screens
-        return 180;                    // Small screens
+        if (width > 1200) return 180; // Large screens
+        if (width > 768) return 160;   // Medium screens
+        return 250;                    // Small screens
       }
 
       document.querySelectorAll('a[href^="#"]').forEach(anchor => {
