Added more to projects

--- a/index.html
+++ b/index.html
@@ -69,16 +69,13 @@
             of the mechanics I have implemented so far. The scripts are in my 
             <a href="https://github.com/johnlulu2004/Platformer-Game-Scripts">github</a>.
             <br /><br />
-                        This website is for
-            <a href="https://johnlulu2004.github.io/My-Photo-Blog/photosite"
-              >my photo blog</a
-            >
+            This   <a href="https://johnlulu2004.github.io/My-Photo-Blog/photosite">website</a>  is for my photo blog
             of my favorite photos I have taken! <br /><br />
-            I am making this website for
-            <a
+            I am making this <a
               href="https://johnlulu2004.github.io/Pricing-Panel-Coaching/index.html"
-              >Valorant coaching</a
-            >, something that I want to do for fun. I am currently top 2000 in
+              >website</a
+            > for
+            Valorant coaching, something that I want to do for fun. I am currently top 2000 in
             North America so I want to help others improve their gameplay.
             <br /><br />
             There will be more to come. I am currently self-learning from
