--- a/index.html
+++ b/index.html
@@ -78,8 +78,11 @@
             Valorant coaching, something that I want to do for fun. I am currently top 2000 in
             North America so I want to help others improve their gameplay.
             <br /><br />
-            There will be more to come. I am currently self-learning from
-            online videos.
+            <a href="https://johnlulu2004.github.io/PrivateHophacksRepo2024/">This</a> 
+            is a website my team made at Hophacks 2024. It uses Every.org API, Leaflet, Google Maps API, and OpenAI API 
+            in order to display an interactive map that displays their website and donation link. This map also filters results based off of a search query
+            and gives donations recommendations to the user.
+
           </p></div>
           <div class="image-section">
             <video
